[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Devika"]
description = "Devika is an Agentic AI Software Engineer that can understand high-level human instructions, break them down into steps, research relevant information, and write code to achieve the given objective. Devika aims to be a competitive open-source alternative to Devin by Cognition AI."
keywords = [
  "AI",
  "Software Engineer",
  "OpenAI",
  "Devin",
  "Cognition AI",
  "Devika",
  "Agentic AI",
  "Open Source",
  "Alternative",
]
name = "devika"
packages = [
  {include = "devika"},
]
version = "0.0.2"

[tool.poetry.dependencies]
GitPython = "*"
Jinja2 = "*"
Markdown = "*"
anthropic = "*"
colorama = "*"
duckduckgo-search = "*"
fastlogging = "*"
flask = "*"
flask-cors = "*"
google-generativeai = "*"
groq = "*"
keybert = "*"
markdownify = "*"
mistletoe = "*"
netlify-py = "*"
ollama = "*"
openai = "*"
pdfminer-six = "*"
playwright = "*"
pytest-playwright = "*"
python = ">=3.10,<3.12"
rank-bm25 = "*"
requests = "*"
sqlmodel = "*"
tiktoken = "*"
toml = "*"
urllib3 = "*"
xhtml2pdf = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "*"
pylint = "*"

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.pylint]
disable = "missing-module-docstring,missing-function-docstring,missing-class-docstring,arguments-differ"
fail-under = 7.5 # TODO: Update this value as the project grows
